package com.example;

public class Datapoint {
    // Define your data point attributes here
    private String data;

    public Datapoint(String data) {
        this.data = data;
    }

    public String getData() {
        return data;
    }

    public void setData(String data) {
        this.data = data;
    }
}

