package com.example.database;

public enum DatabaseIdentifier {
    POSTGRES,
    REDIS,
    ELASTIC
}

