package com.example.processor;

public enum ModeIdentifier {
    DUMP,
    PASSTHROUGH,
    VALIDATE
}

